--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -66,4 +66,4 @@ It is expected that the metaverse will be the next generation of the internet an
 </div>
 
 <br/>
-<i>Notes: TBU = to be updated.
+<i>Notes: TBU = to be updated.</i>
