--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -4,7 +4,7 @@ title: Books
 
 # Books
 
-### <highlight  color="#04be58">Current Book Project: Coming soon</highlight>
+### <highlight  color="#04be58">Current Book Project</highlight>
 
 <div class="row">
 <div class="col col--2"><img src="/updates/comingsoon.png"/></div>
