--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -27,7 +27,7 @@ The primary intended audience for this publication includes Researchers and scho
 <br/>- Full chapter submission: Sep 15, 2024
 <br/>- Review results due to authors: Nov 17, 2024
 <br/>- Revisions due from authors: Dec 15, 2024
-<br/>- Final acceptance/rejection notification due to authorsDec 29, 2024
+<br/>- Final acceptance/rejection notification due to authors: Dec 29, 2024
 <br/>- All final accepted materials due from authors: Jan 12, 2025
 <br/>- Final deadline: Jan 26, 2025
 
