--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -11,25 +11,25 @@ title: Books
 <div class="col col--10">
 <h3>Artificial Intelligence and Data Science for Sustainability: Applications and Methods</h3>
 By Muhammad Syafrudin, Norma Latif Fitriyani, Muhammad Anshari
-<br/>(Expected) Release Date: January, 2025 | (Expected) Pages: 300 | DOI: <a target='_blank' alt='link' rel='noopener noreferrer' href='#'>10.4018/979-8-3693-6829-9</a><br/>
+<br/>(Expected) Release Date: January, 2025 | (Expected) Pages: 300 | DOI: <a target='_blank' alt='link' rel='noopener noreferrer' href='#'>10.4018/979-8-3693-6829-9</a>
+<br/>
 <h3>Description:</h3>
 The proposed publication, titled "<b>Artificial Intelligence and Data Science for Sustainability: Applications and Methods</b>," aims to explore the applications of artificial intelligence (AI) techniques and methodologies in addressing various sustainability challenges. The book will bring together cutting-edge research, case studies, and practical applications that demonstrate how AI can be leveraged to promote sustainable development across diverse domains, such as energy, transportation, agriculture, waste management, urban planning, and environmental protection. The publication will delve into the intersection of AI and sustainability, showcasing how AI technologies, including machine learning, deep learning, computer vision, natural language processing, and optimization algorithms, can be harnessed to develop innovative solutions for environmental, economic, business, and social sustainability challenges.
 <br/><br/>
 This publication will have a significant impact on the research community by bringing together researchers and practitioners from various fields, including business & economics, management, computer science, environmental science, engineering, urban planning, and sustainable development, the book will promote cross-pollination of ideas and facilitate interdisciplinary collaborations.
 <br/><br/>
-The primary intended audience for this publication includes Researchers and scholars from various disciplines, such as computer science, environmental science, engineering, urban planning, and sustainable development, who are interested in exploring the applications of AI for sustainability. Professionals working in industries related to sustainability, such as energy, transportation, agriculture, waste management, and urban planning, who seek to understand and implement AI-driven solutions for sustainable practices. Government officials, policymakers, and decision-makers involved in sustainability initiatives and environmental policies, who can benefit from insights and recommendations on leveraging AI for sustainable development. Students pursuing advanced degrees in relevant fields, such as computer science, environmental science, engineering, and sustainable development, who are interested in exploring the intersection of AI and sustainability.
-<br/>
+The primary intended audience for this publication includes Researchers and scholars from various disciplines, such as computer science, environmental science, engineering, urban planning, and sustainable development, who are interested in exploring the applications of AI for sustainability. Professionals working in industries related to sustainability, such as energy, transportation, agriculture, waste management, and urban planning, who seek to understand and implement AI-driven solutions for sustainable practices. Government officials, policymakers, and decision-makers involved in sustainability initiatives and environmental policies, who can benefit from insights and recommendations on leveraging AI for sustainable development. Students pursuing advanced degrees in relevant fields, such as computer science, environmental science, engineering, and sustainable development, who are interested in exploring the intersection of AI and sustainability.<br/>
+
 <h3>Call for Chapters (TBU):</h3>
 <br/>
-<h3>Important Deadlines:</h3>
-- 1st proposal submission deadline: Jun 2, 2024
-<br/>- 2nd proposal submission deadline: Jun 30, 2024
-<br/>- Full chapter submission: Sep 15, 2024
-<br/>- Review results due to authors: Nov 17, 2024
-<br/>- Revisions due from authors: Dec 15, 2024
-<br/>- Final acceptance/rejection notification due to authors: Dec 29, 2024
-<br/>- All final accepted materials due from authors: Jan 12, 2025
-<br/>- Final deadline: Jan 26, 2025
+<h3>Important Dates:</h3>
+<b>June 2, 2024:</b> Proposal Submission Deadline
+<br/><b>June 16, 2024:</b> Notification of Acceptance
+<br/><b>September 15, 2024:</b> Full Chapter Submission
+<br/><b>November 17, 2024:</b> Review Results Returned
+<br/><b>December 29, 2024:</b> Final Acceptance Notification
+<br/><b>January 12, 2025:</b> Final Chapter Submission
+<br/>
 
 <h3>Call for Reviewers (TBU):</h3>
 If you are interested in becoming a reviewer, please kindly fill out the following form, and we will assign the matched chapters to you. We sincerely appreciate your valuable contributions and cooperation in making this edited book project a success. Thank you.
