new edited book

--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -10,8 +10,8 @@ title: Books
 <div class="col col--2"><img src="/updates/comingsoon.png"/></div>
 <div class="col col--10">
 <h3>Artificial Intelligence and Data Science for Sustainability: Applications and Methods</h3>
-By Muhammad Syafrudin, Norma Latif Fitriyani, Muhammad Anshari
-<br/>(Expected) Release Date: January, 2025 | (Expected) Pages: 300 | DOI: <a target='_blank' alt='link' rel='noopener noreferrer' href='#'>10.4018/979-8-3693-6829-9</a>
+<i>By Muhammad Syafrudin, Norma Latif Fitriyani, Muhammad Anshari</i>
+<br/>(Expected) Release Date: January, 2025 | (Expected) Pages: 300 | DOI: 10.4018/979-8-3693-6829-9
 <br/>
 <h3>Description:</h3>
 The proposed publication, titled "<b>Artificial Intelligence and Data Science for Sustainability: Applications and Methods</b>," aims to explore the applications of artificial intelligence (AI) techniques and methodologies in addressing various sustainability challenges. The book will bring together cutting-edge research, case studies, and practical applications that demonstrate how AI can be leveraged to promote sustainable development across diverse domains, such as energy, transportation, agriculture, waste management, urban planning, and environmental protection. The publication will delve into the intersection of AI and sustainability, showcasing how AI technologies, including machine learning, deep learning, computer vision, natural language processing, and optimization algorithms, can be harnessed to develop innovative solutions for environmental, economic, business, and social sustainability challenges.
@@ -20,7 +20,9 @@ This publication will have a significant impact on the research community by bri
 <br/><br/>
 The primary intended audience for this publication includes Researchers and scholars from various disciplines, such as computer science, environmental science, engineering, urban planning, and sustainable development, who are interested in exploring the applications of AI for sustainability. Professionals working in industries related to sustainability, such as energy, transportation, agriculture, waste management, and urban planning, who seek to understand and implement AI-driven solutions for sustainable practices. Government officials, policymakers, and decision-makers involved in sustainability initiatives and environmental policies, who can benefit from insights and recommendations on leveraging AI for sustainable development. Students pursuing advanced degrees in relevant fields, such as computer science, environmental science, engineering, and sustainable development, who are interested in exploring the intersection of AI and sustainability.<br/>
 
-<h3>Call for Chapters (TBU):</h3>
+<h3>Call for Chapters:</h3>
+- Call for chapters details: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/publish/call-for-papers/call-details/7584'>https://www.igi-global.com/publish/call-for-papers/call-details/7584</a>
+<br/> - Propose a Chapter: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/publish/call-for-papers/submit/7584'>https://www.igi-global.com/publish/call-for-papers/submit/7584</a>
 <br/>
 <h3>Important Dates:</h3>
 <b>June 2, 2024:</b> Proposal Submission Deadline
@@ -37,8 +39,6 @@ If you are interested in becoming a reviewer, please kindly fill out the followi
 <h3>Get the Book from (TBU):</h3>
 <ul>
 <li><a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/book/artificial-intelligence-data-science-sustainability/345966'>IGI Global</a></li>
-<li><a target='_blank' alt='link' rel='noopener noreferrer' href='#'>Google Books</a></li>
-<li><a target='_blank' alt='link' rel='noopener noreferrer' href='#'>Amazon</a></li>
 </ul>
 </div>
 </div>
@@ -50,7 +50,7 @@ If you are interested in becoming a reviewer, please kindly fill out the followi
 <div class="col col--10">
 <h3>Metaverse Applications for New Business Models and Disruptive Innovation
 </h3>
-By Muhammad Anshari, Muhammad Syafrudin, Ganjar Alfian
+<i>By Muhammad Anshari, Muhammad Syafrudin, Ganjar Alfian</i>
 <br/>Release Date: January, 2023 | Pages: 265 | DOI: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.4018/978-1-6684-6097-9'>10.4018/978-1-6684-6097-9</a><br/>
 <h3>Description:</h3>
 It is expected that the metaverse will be the next generation of the internet and its online activities and will serve as the foundation for a massive online business platform. Furthermore, it will alter people's behavior, which will have an impact on businesses' decisions to choose the metaverse as their primary business platform.
