--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -41,7 +41,7 @@ The primary intended audience for this publication includes Researchers and scho
 If you are interested in becoming a reviewer, please kindly fill out the following form, and we will assign the matched chapters to you. We sincerely appreciate your valuable contributions and cooperation in making this edited book project a success. Thank you.
 <br/>
 <div class="map-responsive">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScSIJR9EJYuVglYiKAj0JZqQ0T3oto6Zay9n9PApzdLUKOusQ/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScSIJR9EJYuVglYiKAj0JZqQ0T3oto6Zay9n9PApzdLUKOusQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 
 
