--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -42,7 +42,7 @@ The primary intended audience for this publication includes Researchers and scho
 <h3>Call for Reviewers:</h3>
 If you are interested in becoming a reviewer, please kindly fill out the following form, and we will assign the matched chapters to you. We sincerely appreciate your valuable contributions and cooperation in making this edited book project a success. Thank you.
 <br/>
-<div style="height: 100vh;">
+<div class="map-responsive">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScSIJR9EJYuVglYiKAj0JZqQ0T3oto6Zay9n9PApzdLUKOusQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 
