--- a/src/pages/books.mdx
+++ b/src/pages/books.mdx
@@ -18,14 +18,13 @@ The proposed publication, titled "<b>Artificial Intelligence and Data Science fo
 <br/><br/>
 This publication will have a significant impact on the research community by bringing together researchers and practitioners from various fields, including business & economics, management, computer science, environmental science, engineering, urban planning, and sustainable development, the book will promote cross-pollination of ideas and facilitate interdisciplinary collaborations.
 <br/><br/>
-The primary intended audience for this publication includes Researchers and scholars from various disciplines, such as computer science, environmental science, engineering, urban planning, and sustainable development, who are interested in exploring the applications of AI for sustainability. Professionals working in industries related to sustainability, such as energy, transportation, agriculture, waste management, and urban planning, who seek to understand and implement AI-driven solutions for sustainable practices. Government officials, policymakers, and decision-makers involved in sustainability initiatives and environmental policies, who can benefit from insights and recommendations on leveraging AI for sustainable development. Students pursuing advanced degrees in relevant fields, such as computer science, environmental science, engineering, and sustainable development, who are interested in exploring the intersection of AI and sustainability.<br/>
+The primary intended audience for this publication includes Researchers and scholars from various disciplines, such as computer science, environmental science, engineering, urban planning, and sustainable development, who are interested in exploring the applications of AI for sustainability. Professionals working in industries related to sustainability, such as energy, transportation, agriculture, waste management, and urban planning, who seek to understand and implement AI-driven solutions for sustainable practices. Government officials, policymakers, and decision-makers involved in sustainability initiatives and environmental policies, who can benefit from insights and recommendations on leveraging AI for sustainable development. Students pursuing advanced degrees in relevant fields, such as computer science, environmental science, engineering, and sustainable development, who are interested in exploring the intersection of AI and sustainability.<br/><br/>
 
 <h3>Call for Chapters:</h3>
+Call for chapters details: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/publish/call-for-papers/call-details/7584'>https://www.igi-global.com/publish/call-for-papers/call-details/7584</a>
+<br/>Propose a Chapter: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/publish/call-for-papers/submit/7584'>https://www.igi-global.com/publish/call-for-papers/submit/7584</a>
 
-- Call for chapters details: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/publish/call-for-papers/call-details/7584'>https://www.igi-global.com/publish/call-for-papers/call-details/7584</a>
-<br/> - Propose a Chapter: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.igi-global.com/publish/call-for-papers/submit/7584'>https://www.igi-global.com/publish/call-for-papers/submit/7584</a>
 
-<br/>
 <b>Note: There are no submission or acceptance fees for chapters submitted to this book publication.</b> 
 
 <br/>
@@ -37,15 +36,15 @@ The primary intended audience for this publication includes Researchers and scho
 <br/><b>November 17, 2024:</b> Review Results Returned
 <br/><b>December 29, 2024:</b> Final Acceptance Notification
 <br/><b>January 12, 2025:</b> Final Chapter Submission
-<br/>
+<br/><br/>
 
 <h3>Call for Reviewers:</h3>
 If you are interested in becoming a reviewer, please kindly fill out the following form, and we will assign the matched chapters to you. We sincerely appreciate your valuable contributions and cooperation in making this edited book project a success. Thank you.
 <br/>
 <div class="map-responsive">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScSIJR9EJYuVglYiKAj0JZqQ0T3oto6Zay9n9PApzdLUKOusQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScSIJR9EJYuVglYiKAj0JZqQ0T3oto6Zay9n9PApzdLUKOusQ/viewform?embedded=true#i1" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
-
+<br/><br/>
 
 <h3>Get the Book from (TBU):</h3>
 <ul>
