--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -76,7 +76,7 @@ YOU?
 
 <br/>
 <i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
-<a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank"><img src="/team/collaboration_map_v20240102.png"/></a><br/>
+<a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank"><img src="/team/collaboration_map.png"/></a><br/>
 <br/>
 
 *We welcome and encourage the following types of collaborations: joint-research publications, joint-projects, visiting programs, etc. that can enhance our research. We believe that such mutual and fruitful collaborations can lead to significant advancements in research.*
