--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -4,7 +4,7 @@ title: Contact
 
 # Contact
 
-- <highlight  color="#1877F2">E-mail: udin [at] sejong [dot] ac [dot] kr</highlight>
+- E-mail: <highlight color="#1877F2">udin[at]sejong.ac.kr</highlight> or <highlight color="#991b1b">udin[at]aintlab.com</highlight>
 - Phone: +82-2-3408-1879
 - Address
  	- (Korean) 05006 서울특별시 광진구 능동로 209 (군자동) 세종대학교, 대양AI센터 502호
