--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,6 +14,7 @@ Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www
 ### [J] Journal Articles
 <ol reversed>
 
+<li>Haider, M., Hashmi, M.S.A., Raza, A., Ibrahim, M., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. (2024) Novel Ensemble Learning Algorithm for Early Detection of Lower Back Pain Using Spinal Anomalies. Mathematics, 12, 1955. https://doi.org/10.3390/math12131955 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12131955'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='#'>[GoogleScholar]</a></li>
 <li>Anshari, M., Almunawar, M.N., Masri, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Autonomous Vehicle Safety through the SIFT Method: A Conceptual Analysis. Information, 15, 357. https://doi.org/10.3390/info15060357 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15060357'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:NhqRSupF_l8C'>[GoogleScholar]</a></li>
 <li>Bae, Y., Jung, H., Shin, N., Rahmati, M., Udeh, R., Kazemi, A., Li, Y., Solmi, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., et al. (2024) Musculoskeletal Morbidity in Adults with Spinal Cord Injuries: A Nationwide Cohort Study. NRE, 1–12, doi:10.3233/NRE-230263. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3233/NRE-230263'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:b0M2c_1WBrUC'>[GoogleScholar]</a></li>
 <li>Guneser, M.T., Seker, C., Guler, M.I., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Efficient 5.8 GHz Microstrip Antennas for Intelligent Transportation Systems: Design, Fabrication, and Performance Analysis. Mathematics 2024, 12, 1202. https://doi.org/10.3390/math12081202 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12081202'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:EUQCXRtRnyEC'>[GoogleScholar]</a></li>
