--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -67,9 +67,9 @@ Research interest: machine learning
 
 ### <highlight  color="#0184c6">Master/PhD</highlight>
 
-YOU?
+<b>We currently do not have any research assistant scholarships available. Please refrain from contacting me if you do not have other funding for your studies.</b>
 
-<i>Please refer to the following link for detailed information on the admissions procedure, requirements, and scholarship: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
+<i>For detailed information on the admissions procedure, requirements, and scholarships, please refer to the following link: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
 <br/><br/>
 
 ### <highlight  color="#980606">Research Collaborator</highlight>
