--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -15,9 +15,9 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 <ol reversed>
 
 
-<li>Nawawi, I., Ilmawan, K.F., Maarif, M.R., <b>Syafrudin, M.*</b> Exploring Tourist Experience through Online Reviews Using Aspect-Based Sentiment Analysis with Zero-Shot Learning for Hospitality Service Enhancement. Information 2024, 15, 499. https://doi.org/10.3390/info15080499 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15080499'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:P5F9QuxV20EC'>[GoogleScholar]</a></li>
-<li>Ridzuan, N.N., Masri, M., Anshari, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> AI in the Financial Sector: The Line between Innovation, Regulation and Ethical Responsibility. Information 2024, 15, 432. https://doi.org/10.3390/info15080432 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15080432'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:CHSYGLWDkRkC'>[GoogleScholar]</a></li>
-<li>Malik, D.S., Shah, T., Tehsin, S., Nasir, I.M., Fitriyani, N.L., <b>Syafrudin, M.*</b> Block Cipher Nonlinear Component Generation via Hybrid Pseudo-Random Binary Sequence for Image Encryption. Mathematics 2024, 12, 2302. https://doi.org/10.3390/math12152302 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12152302'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:1sJd4Hv_s6UC'>[GoogleScholar]</a></li>
+<li>Nawawi, I., Ilmawan, K.F., Maarif, M.R., <b>Syafrudin, M.*</b> (2024) Exploring Tourist Experience through Online Reviews Using Aspect-Based Sentiment Analysis with Zero-Shot Learning for Hospitality Service Enhancement. Information 2024, 15, 499. https://doi.org/10.3390/info15080499 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15080499'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:P5F9QuxV20EC'>[GoogleScholar]</a></li>
+<li>Ridzuan, N.N., Masri, M., Anshari, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) AI in the Financial Sector: The Line between Innovation, Regulation and Ethical Responsibility. Information 2024, 15, 432. https://doi.org/10.3390/info15080432 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15080432'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:CHSYGLWDkRkC'>[GoogleScholar]</a></li>
+<li>Malik, D.S., Shah, T., Tehsin, S., Nasir, I.M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Block Cipher Nonlinear Component Generation via Hybrid Pseudo-Random Binary Sequence for Image Encryption. Mathematics 2024, 12, 2302. https://doi.org/10.3390/math12152302 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12152302'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:1sJd4Hv_s6UC'>[GoogleScholar]</a></li>
 <li>Haider, M., Hashmi, M.S.A., Raza, A., Ibrahim, M., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. (2024) Novel Ensemble Learning Algorithm for Early Detection of Lower Back Pain Using Spinal Anomalies. Mathematics, 12, 1955. https://doi.org/10.3390/math12131955 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12131955'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:xtRiw3GOFMkC'>[GoogleScholar]</a></li>
 <li>Anshari, M., Almunawar, M.N., Masri, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Autonomous Vehicle Safety through the SIFT Method: A Conceptual Analysis. Information, 15, 357. https://doi.org/10.3390/info15060357 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15060357'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:NhqRSupF_l8C'>[GoogleScholar]</a></li>
 <li>Bae, Y., Jung, H., Shin, N., Rahmati, M., Udeh, R., Kazemi, A., Li, Y., Solmi, M., <b>Syafrudin, M.</b>, Fitriyani, N.L., et al. (2024) Musculoskeletal Morbidity in Adults with Spinal Cord Injuries: A Nationwide Cohort Study. NRE, 1–12, doi:10.3233/NRE-230263. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3233/NRE-230263'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:b0M2c_1WBrUC'>[GoogleScholar]</a></li>
