--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,7 +14,8 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 ### [J] Journal Articles
 <ol reversed>
 
-
+<li>Hameed, A.A., Jamil, A., Alazzawi, E.M., Marquez, F.P.G., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2024) Improving the Performance of Self-Organizing Map Using Reweighted Zero-Attracting Method. Alexandria Engineering Journal, 106, 743–752, doi:10.1016/j.aej.2024.08.081 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.aej.2024.08.081'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:nb7KW1ujOQ8C'>[GoogleScholar]</a></li>
+<li>Tan, W.S., Harito, C., Andhini, G.K., Martawidjaja, M., Chainando, N., Syafi’i, M., Putra, K.B., <b>Syafrudin, M.</b> (2024) Color Modification of Silicone-Based Prosthetic Finger by 3D-Printed Mold. Prosthesis, 6, 1017-1028. https://doi.org/10.3390/prosthesis6050074 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/prosthesis6050074'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:KxtntwgDAa4C'>[GoogleScholar]</a></li>
 <li>Nawawi, I., Ilmawan, K.F., Maarif, M.R., <b>Syafrudin, M.*</b> (2024) Exploring Tourist Experience through Online Reviews Using Aspect-Based Sentiment Analysis with Zero-Shot Learning for Hospitality Service Enhancement. Information 2024, 15, 499. https://doi.org/10.3390/info15080499 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15080499'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:P5F9QuxV20EC'>[GoogleScholar]</a></li>
 <li>Ridzuan, N.N., Masri, M., Anshari, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) AI in the Financial Sector: The Line between Innovation, Regulation and Ethical Responsibility. Information 2024, 15, 432. https://doi.org/10.3390/info15080432 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15080432'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:CHSYGLWDkRkC'>[GoogleScholar]</a></li>
 <li>Malik, D.S., Shah, T., Tehsin, S., Nasir, I.M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Block Cipher Nonlinear Component Generation via Hybrid Pseudo-Random Binary Sequence for Image Encryption. Mathematics 2024, 12, 2302. https://doi.org/10.3390/math12152302 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12152302'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:1sJd4Hv_s6UC'>[GoogleScholar]</a></li>
