--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,6 +14,7 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 ### [J] Journal Articles
 <ol reversed>
 
+<li>Tehsin, S., Hassan, A., Riaz, F., Nasir, I.M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Enhancing Signature Verification Using Triplet Siamese Similarity Networks in Digital Documents. Mathematics, 12, 2757. https://doi.org/10.3390/math12172757<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12172757'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:dshw04ExmUIC'>[GoogleScholar]</a></li>
 <li>Hameed, A.A., Jamil, A., Alazzawi, E.M., Marquez, F.P.G., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2024) Improving the Performance of Self-Organizing Map Using Reweighted Zero-Attracting Method. Alexandria Engineering Journal, 106, 743–752, doi:10.1016/j.aej.2024.08.081 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.aej.2024.08.081'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:nb7KW1ujOQ8C'>[GoogleScholar]</a></li>
 <li>Tan, W.S., Harito, C., Andhini, G.K., Martawidjaja, M., Chainando, N., Syafi’i, M., Putra, K.B., <b>Syafrudin, M.</b> (2024) Color Modification of Silicone-Based Prosthetic Finger by 3D-Printed Mold. Prosthesis, 6, 1017-1028. https://doi.org/10.3390/prosthesis6050074 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/prosthesis6050074'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:KxtntwgDAa4C'>[GoogleScholar]</a></li>
 <li>Nawawi, I., Ilmawan, K.F., Maarif, M.R., <b>Syafrudin, M.*</b> (2024) Exploring Tourist Experience through Online Reviews Using Aspect-Based Sentiment Analysis with Zero-Shot Learning for Hospitality Service Enhancement. Information 2024, 15, 499. https://doi.org/10.3390/info15080499 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15080499'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:P5F9QuxV20EC'>[GoogleScholar]</a></li>
