--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,6 +14,7 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 ### [J] Journal Articles
 <ol reversed>
 
+<li>Alzaidi, M.S.A., Alshammari, A., Hassan, A.Q.A., Yousafzai, S.N., Thaljaoui, A., Fitriyani, N.L., Kim, C., <b>Syafrudin, M. *</b> (2024) An Efficient Fusion Network for Fake News Classification. Mathematics, 12, 3294. https://doi.org/10.3390/math12203294<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12203294'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:uWQEDVKXjbEC'>[GoogleScholar]</a></li>
 <li>Yar, M.A., Hamdan, M., Anshari, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Governing with Intelligence: The Impact of Artificial Intelligence on Policy Development. Information, 15, 556. https://doi.org/10.3390/info15090556<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15090556'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:UxriW0iASnsC'>[GoogleScholar]</a></li>
 <li>Tehsin, S., Hassan, A., Riaz, F., Nasir, I.M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Enhancing Signature Verification Using Triplet Siamese Similarity Networks in Digital Documents. Mathematics, 12, 2757. https://doi.org/10.3390/math12172757<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12172757'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:dshw04ExmUIC'>[GoogleScholar]</a></li>
 <li>Hameed, A.A., Jamil, A., Alazzawi, E.M., Marquez, F.P.G., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2024) Improving the Performance of Self-Organizing Map Using Reweighted Zero-Attracting Method. Alexandria Engineering Journal, 106, 743–752, doi:10.1016/j.aej.2024.08.081 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.aej.2024.08.081'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:nb7KW1ujOQ8C'>[GoogleScholar]</a></li>
