--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -4,7 +4,7 @@ title: Contact
 
 # Contact
 
-- Applied INTelligence Lab (AINTLab), Seoul 05006, Republic of Korea.
+- Applied INTelligence Lab (AINTLab), Seoul 05006, Republic of Korea
 - E-mail: <highlight color="#1877F2">udin[at]sejong.ac.kr</highlight> or <highlight color="#991b1b">udin[at]aintlab.com</highlight>
 - Phone: +82-2-3408-1879
 - Address
