--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -14,6 +14,14 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 ### [J] Journal Articles
 <ol reversed>
 
+
+<li>Yousafzai, S.N., Nasir, I.M., Tehsin, S., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2025) FLTrans-Net: Transformer-Based Feature Learning Network for Wheat Head Detection. Computers and Electronics in Agriculture, 229, 109706, https://doi.org/10.1016/j.compag.2024.109706
+ <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.compag.2024.109706'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:Tiz5es2fbqcC'>[GoogleScholar]</a></li>
+<li>Ramzan, S., Ali, B., Raza, A., Hussain, I., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2024) An Innovative Artificial Neural Network Model for Smart Crop Prediction Using Sensory Network Based Soil Data. PeerJ Computer Science, 10, e2478, https://doi.org/10.7717/peerj-cs.2478 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.2478'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:XiSMed-E-HIC'>[GoogleScholar]</a></li>
+<li>Kusumaningrum, R., Arafifin, A. H., Khoerunnisa, S. F., Sasongko, P. S., Wirawan, P. W., & <b>Syarifudin, M.</b> (2025). Hyperparameter Optimization for Convolutional Neural Network-Based Sentiment Analysis. Journal of Advanced Research in Applied Sciences and Engineering Technology, 53(1), 44-56. https://doi.org/10.37934/araset.53.1.4456
+<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.37934/araset.53.1.4456'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:u9iWguZQMMsC'>[GoogleScholar]</a></li>
+<li>Rony, M.A.T., Johora, F.T., Thalji, N., Raza, A., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. (2024) Innovative Approach to Detecting Autism Spectrum Disorder Using Explainable Features and Smart Web Application. Mathematics, 12, 3515. https://doi.org/10.3390/math12223515<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12223515'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:OU6Ihb5iCvQC'>[GoogleScholar]</a></li>
+<li>Fatwanto, A., Aslam, M. N., Ndugi, R., & <b>Syafrudin, M.</b> (2024). An Investigation Towards Resampling Techniques and Classification Algorithms on CM1 NASA PROMISE Dataset for Software Defect Prediction. Jurnal RESTI (Rekayasa Sistem dan Teknologi Informasi), 8(5), 631-643.<a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.jurnal.iaii.or.id/index.php/RESTI/article/view/5910'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:SP6oXDckpogC'>[GoogleScholar]</a></li>
 <li>Alzaidi, M.S.A., Alshammari, A., Hassan, A.Q.A., Yousafzai, S.N., Thaljaoui, A., Fitriyani, N.L., Kim, C., <b>Syafrudin, M.*</b> (2024) An Efficient Fusion Network for Fake News Classification. Mathematics, 12, 3294. https://doi.org/10.3390/math12203294<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12203294'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:uWQEDVKXjbEC'>[GoogleScholar]</a></li>
 <li>Yar, M.A., Hamdan, M., Anshari, M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Governing with Intelligence: The Impact of Artificial Intelligence on Policy Development. Information, 15, 556. https://doi.org/10.3390/info15090556<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15090556'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:UxriW0iASnsC'>[GoogleScholar]</a></li>
 <li>Tehsin, S., Hassan, A., Riaz, F., Nasir, I.M., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2024) Enhancing Signature Verification Using Triplet Siamese Similarity Networks in Digital Documents. Mathematics, 12, 2757. https://doi.org/10.3390/math12172757<a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12172757'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:dshw04ExmUIC'>[GoogleScholar]</a></li>
@@ -75,6 +83,8 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 
 ### [C] Conference Proceedings
 <ol reversed>
+
+<li>Asrol, M., Napthaleni, Utama, D.N., Suharjito, Harito, C., <b>Syafrudin, M.*</b> (2024) A Hybrid Inference Engine to Predict Uncertain Sugar Content for Sugar Industry. Procedia Computer Science, 245, 480–489, https://doi.org/10.1016/j.procs.2024.10.274 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.procs.2024.10.274'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:p2g8aNsByqUC'>[GoogleScholar]</a></li>
 <li>Asrol, M., Wahyudi, S., Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
 <li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1051/e3sconf/202342601012'>[GoogleScholar]</a>.</li>
 <li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT60104.2023.10391550'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT60104.2023.10391550'>[GoogleScholar]</a></li>
