--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -17,6 +17,7 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 
 <li>Yousafzai, S.N., Nasir, I.M., Tehsin, S., Fitriyani, N.L., <b>Syafrudin, M.*</b> (2025) FLTrans-Net: Transformer-Based Feature Learning Network for Wheat Head Detection. Computers and Electronics in Agriculture, 229, 109706, https://doi.org/10.1016/j.compag.2024.109706
  <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.compag.2024.109706'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:Tiz5es2fbqcC'>[GoogleScholar]</a></li>
+<li> Ipa, A.S., Roy, P.N., Rony, M.A.T., Raza, A., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2024) BdSentiLLM: A Novel LLM Approach to Sentiment Analysis of Product Reviews. IEEE Access, 1–1, doi:10.1109/ACCESS.2024.3516826. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/ACCESS.2024.3516826'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&citation_for_view=WLTzkOMAAAAJ:WbkHhVStYXYC'>[GoogleScholar]</a></li>
 <li>Ramzan, S., Ali, B., Raza, A., Hussain, I., Fitriyani, N.L., Gu, Y., <b>Syafrudin, M.*</b> (2024) An Innovative Artificial Neural Network Model for Smart Crop Prediction Using Sensory Network Based Soil Data. PeerJ Computer Science, 10, e2478, https://doi.org/10.7717/peerj-cs.2478 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.7717/peerj-cs.2478'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:XiSMed-E-HIC'>[GoogleScholar]</a></li>
 <li>Kusumaningrum, R., Arafifin, A. H., Khoerunnisa, S. F., Sasongko, P. S., Wirawan, P. W., & <b>Syarifudin, M.</b> (2025). Hyperparameter Optimization for Convolutional Neural Network-Based Sentiment Analysis. Journal of Advanced Research in Applied Sciences and Engineering Technology, 53(1), 44-56. https://doi.org/10.37934/araset.53.1.4456
 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.37934/araset.53.1.4456'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:u9iWguZQMMsC'>[GoogleScholar]</a></li>
@@ -84,7 +85,7 @@ Links: <highlight color="#DACAFF"><a target='_blank' alt='link' rel='noopener no
 ### [C] Conference Proceedings
 <ol reversed>
 
-<li>Asrol, M., Napthaleni, Utama, D.N., Suharjito, Harito, C., <b>Syafrudin, M.*</b> (2024) A Hybrid Inference Engine to Predict Uncertain Sugar Content for Sugar Industry. Procedia Computer Science, 245, 480–489, https://doi.org/10.1016/j.procs.2024.10.274 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.procs.2024.10.274'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:p2g8aNsByqUC'>[GoogleScholar]</a></li>
+<li>Asrol, M., Napthaleni, Utama, D.N., Suharjito, Harito, C., <b>Syafrudin, M.</b> (2024) A Hybrid Inference Engine to Predict Uncertain Sugar Content for Sugar Industry. Procedia Computer Science, 245, 480–489, https://doi.org/10.1016/j.procs.2024.10.274 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1016/j.procs.2024.10.274'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:p2g8aNsByqUC'>[GoogleScholar]</a></li>
 <li>Asrol, M., Wahyudi, S., Suharjito, Harito, C., Utama, D.N., <b>Syafrudin, M.</b> Improving Supplier Evaluation Model Using Ensemble Method-Machine Learning for Food Industry. Procedia Computer Science 2023, 227, 307–315, doi:10.1016/j.procs.2023.10.529. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://dx.doi.org/10.1016/j.procs.2023.10.529'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1016/j.procs.2023.10.529'>[GoogleScholar]</a></li>
 <li>Asrol, M., Alamsjah, F., Olivia, M., Suharjito, Harito, C., <b>Syafrudin, M.</b> An Analysis and Design of Adaptive Assessment System for Manufacturing Industry 4.0 Implementation in Indonesia. E3S Web Conf. 2023, 426, 01012, <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1051/e3sconf/202342601012'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1051/e3sconf/202342601012'>[GoogleScholar]</a>.</li>
 <li>Lee, A., <b>Syafrudin, M.</b>, Gu, Y., Park, S., Kim, M., Lee, Y. A Personalized Restaurant Recommendation Based on Topic Modeling of Online Reviews. In Proceedings of the 2023 International Conference on Innovation and Intelligence for Informatics, Computing, and Technologies (3ICT) (3ICT2023), Bahrain, Bahrain, November 2023, p. 6. <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.1109/3ICT60104.2023.10391550'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/scholar_lookup?doi=10.1109/3ICT60104.2023.10391550'>[GoogleScholar]</a></li>
